[package]
name = "transmute_guard"
version = "0.1.0"
edition = "2021"
description = "Transmute between types that have been marked as safe by the marker type"
readme = "README.md"
repository = "https://github.com/coolCucumber-cat/transmute_guard.git"
license = "MIT"
categories = ["no-std::no-alloc", "no-std", "rust-patterns", "data-structures"]
keywords = ["transmute", "convert"]

[dependencies]

[features]
ascii = []
nightly = ["ascii"]
